force-app/main/default/objects/Resource360_Domain_Event__e/Resource360_Domain_Event__e.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Allowlisted Resource 360 domain event emitted after transaction commit.</description><eventType>HighVolume</eventType><label>Resource 360 Domain Event</label><pluralLabel>Resource 360 Domain Events</pluralLabel><publishBehavior>PublishAfterCommit</publishBehavior></CustomObject>