force-app/main/default/objects/Resource360_Domain_Event__e/fields/Aggregate_Type__c.field-meta.xml
<CustomField><fullName>Aggregate_Type__c</fullName><label>Aggregate Type</label><length>80</length><required>true</required><type>Text</type></CustomField>