force-app/main/default/objects/Resource360_Domain_Event__e/fields/Aggregate_Version__c.field-meta.xml
<CustomField><fullName>Aggregate_Version__c</fullName><label>Aggregate Version</label><precision>8</precision><scale>0</scale><type>Number</type></CustomField>