force-app/main/default/objects/Resource360_Domain_Event__e/fields/Event_ID__c.field-meta.xml
<CustomField><fullName>Event_ID__c</fullName><label>Event ID</label><length>120</length><required>true</required><type>Text</type></CustomField>