force-app/main/default/objects/Resource360_Domain_Event__e/fields/Payload__c.field-meta.xml
<CustomField><fullName>Payload__c</fullName><label>Allowlisted Payload</label><length>4000</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>